force-app/main/default/objects/Salary_Policy__c/Salary_Policy__c.object-meta.xml
<CustomObject>
    <label>Salary Policy</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary Policy</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>