force-app/main/default/objects/Salary_Policy__c/fields/Basicsalary__c.field-meta.xml
<CustomField>
    <fullName>Basicsalary__c</fullName>
    <label>Basic salary</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>