force-app/main/default/objects/Salary_Policy__c/fields/GasolineAllowanceperMonth__c.field-meta.xml
<CustomField>
    <fullName>GasolineAllowanceperMonth__c</fullName>
    <label>Gasoline Allowance per Month</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>