force-app/main/default/objects/Salary_Policy__c/fields/Productivitysalary__c.field-meta.xml
<CustomField>
    <fullName>Productivitysalary__c</fullName>
    <label>Productivity salary</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>