force-app/main/default/objects/Salary_Policy__c/fields/RelocationAllowanceperMonth__c.field-meta.xml
<CustomField>
    <fullName>RelocationAllowanceperMonth__c</fullName>
    <label>Relocation Allowance per Month</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>