force-app/main/default/objects/Salary_Policy__c/fields/TaxableHousingAllowanceperMonth__c.field-meta.xml
<CustomField>
    <fullName>TaxableHousingAllowanceperMonth__c</fullName>
    <label>Taxable Housing Allowance per Month</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>