force-app/main/default/objects/Salary_Policy__c/fields/TaxableMealAllowanceperMonth__c.field-meta.xml
<CustomField>
    <fullName>TaxableMealAllowanceperMonth__c</fullName>
    <label>Taxable Meal Allowance per Month</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>