force-app/main/default/objects/Salary_Policy__c/fields/TaxableUniformAllowanceperMonth__c.field-meta.xml
<CustomField>
    <fullName>TaxableUniformAllowanceperMonth__c</fullName>
    <label>Taxable Uniform Allowance per Month</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>