force-app/main/default/objects/Salary_Policy__c/fields/TaxfreeHousingallowanceperMonth__c.field-meta.xml
<CustomField>
    <fullName>TaxfreeHousingallowanceperMonth__c</fullName>
    <label>Tax-free Housing Allowance per Month</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>