force-app/main/default/objects/Salary_Policy__c/fields/TaxfreeMealAllowanceperMonth__c.field-meta.xml
<CustomField>
    <fullName>TaxfreeMealAllowanceperMonth__c</fullName>
    <defaultValue>730000</defaultValue>
    <label>Tax-free Meal Allowance per Month</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>