force-app/main/default/objects/Salary_Policy__c/fields/TaxfreeUniformAllowanceperMonth__c.field-meta.xml
<CustomField>
    <fullName>TaxfreeUniformAllowanceperMonth__c</fullName>
    <label>Tax-free Uniform Allowance per Month</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>