force-app/main/default/objects/Salary_Policy__c/fields/TelephoneAllowanceperMonth__c.field-meta.xml
<CustomField>
    <fullName>TelephoneAllowanceperMonth__c</fullName>
    <label>Telephone Allowance per Month</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>