force-app/main/default/objects/Salary_Policy__c/fields/Total_Tax_free_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_free_Allowance__c</fullName>
    <formula>TaxfreeHousingallowanceperMonth__c +  TaxfreeMealAllowanceperMonth__c +  TaxfreeUniformAllowanceperMonth__c +  TelephoneAllowanceperMonth__c +  RelocationAllowanceperMonth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax-free Allowance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>