force-app/main/default/objects/Salary_Policy__c/fields/Total_Taxable_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Total_Taxable_Allowance__c</fullName>
    <formula>TaxableHousingAllowanceperMonth__c +  TaxableMealAllowanceperMonth__c  +  TaxableUniformAllowanceperMonth__c +  GasolineAllowanceperMonth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Taxable Allowance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>