force-app/main/default/objects/Salary_Policy__c/validationRules/Housing_Allowance_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Housing_Allowance_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>TaxfreeHousingallowanceperMonth__c &gt; 0.15 * ( Basicsalary__c +  Productivitysalary__c )</errorConditionFormula>
    <errorMessage>Housing Allowance cannot be higher than 15% of Basic Salary + Productivity Salary!</errorMessage>
</ValidationRule>