force-app/main/default/objects/Salary_Policy__c/validationRules/Meal_Allowance_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Meal_Allowance_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>TaxfreeMealAllowanceperMonth__c &gt; 730000</errorConditionFormula>
    <errorMessage>Meal Allowance cannot be higher 730,000đ</errorMessage>
</ValidationRule>