force-app/main/default/objects/Salary_Policy__c/validationRules/Uniform_Allowance_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Uniform_Allowance_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>TaxfreeUniformAllowanceperMonth__c &gt; 416667</errorConditionFormula>
    <errorMessage>Uniform Allowance cannot be higher than 416,000đ per month OR 5,000,000 per year!</errorMessage>
</ValidationRule>